test_suite/tests/ui/type-attribute/into.stderr
error: failed to parse type: into = "Option<T"
  --> $DIR/into.rs:12:10
   |
12 | #[derive(Serialize)]
   |          ^^^^^^^^^

error: aborting due to previous error

